colores css y tamaños

--- a/index.html
+++ b/index.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web jorge</title>
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" h2="estilo.css">
 </head>
 <body>
-    <h1>MY BLOGSPOT OF ROBOTICS</h1>
+    <h1 class="titulo">MY BLOGSPOT OF ROBOTICS</h1>
 
-    <h2>Aqui pondre todo lo que vaya haciendo
+    <h2 class="parrafogrande">Aqui pondre todo lo que vaya haciendo
          durante las clases de robotica</h2>
 
 
-    <p>
+    <p id="favorito">
     Aqui estara colocado el contenido sobre
      robotica, programacion e impresion 3d.
      </p>
-    <p>no m'agrada TOMAS el meu profesor de VALENCIA</p>
-    <p>Voy a pincharle las ruedas del coche</p>
-
-    <h3>Lista del dia 10 de octubre de 2023</h3>
-    <ul style="max-width: 300px;">
+   
+     <h3>Lista del dia 10 de octubre de 2023</h3>
+    <ul style="max-width: 250px;">
         <li>Hacer una cuenta de github</li>
         <li>instalar un servidor http</li>
         <li>Crear una cuenta de github</li>
         <li>crear una pagina html basica</li>
-        <li>Poner a imprimir las piezas del 1er soporte 
-            de la microbit</li>
+        <li>Poner a imprimir las piezas del 1er soporte de la microbit</li>
+    </ul>
+    <h2>NOTAS</h2>
+    <ul style="max-width: 250px;">
+        <li> si en css pulsas control spacio te salen las ayudas</li>
+        <li>para cambiar de color textos que no sean titulos hay 
+            que hacer lo mismo que en estos ir a la pagina web
+            y pulsar f5 </li>
     </ul>
 </body>
 </html>
